# termtype

./: LICENSE  README.md  pyproject.toml  termtype.py
termtype/: __init__.py  __main__.py  app.py  quotes.json  words.json
